@@ -15,8 +15,19 @@ defined('_JEXEC') or die;
 echo JHtml::_('sliders.start','panel-sliders',array('useCookie'=>'1'));
 
 foreach ($this->modules as $module) {
-	echo JHtml::_('sliders.panel', $module->title, 'cpanel-panel-'.$module->name);
-	echo JModuleHelper::renderModule($module);
+	$output = JModuleHelper::renderModule($module);
+	$params = new JRegistry;
+	$params->loadJSON($module->params);
+	if ($params->get('automatic_title','0')=='0') {
+		echo JHtml::_('sliders.panel', $module->title, 'cpanel-panel-'.$module->name);
+	}
+	elseif (method_exists('mod'.$module->name.'Helper','getTitle')) {
+		echo JHtml::_('sliders.panel', call_user_func_array(array('mod'.$module->name.'Helper','getTitle'), array($params)), 'cpanel-panel-'.$module->name);		
+	}
+	else {
+		echo JHtml::_('sliders.panel', JText::_('MOD_'.$module->name.'_TITLE'), 'cpanel-panel-'.$module->name);		
+	}
+	echo $output;
 }
 
 echo JHtml::_('sliders.end');
