@@ -16,4 +16,23 @@ MOD_POPULAR_FIELD_VALUE_ANYONE="Anyone"
 MOD_POPULAR_FIELD_VALUE_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
 MOD_POPULAR_ITEMS="Popular Items"
 MOD_POPULAR_NO_MATCHING_RESULTS="No Matching Results"
+MOD_POPULAR_TITLE="Popular Articles"
+MOD_POPULAR_TITLE_1="Top Popular Article"
+MOD_POPULAR_TITLE_MORE="Top %1$s Popular Articles"
+MOD_POPULAR_TITLE_BY_ME="Top Popular Articles By Me"
+MOD_POPULAR_TITLE_BY_ME_1="Top Popular Article By Me"
+MOD_POPULAR_TITLE_BY_ME_MORE="Top %1$s Popular Articles By Me"
+MOD_POPULAR_TITLE_NOT_ME="Top Popular Articles Not By Me"
+MOD_POPULAR_TITLE_NOT_ME_1="Top Popular Article Not By Me"
+MOD_POPULAR_TITLE_NOT_ME_MORE="Top %1$s Popular Articles Not By Me"
+MOD_POPULAR_TITLE_CATEGORY="Top Popular Articles (<u>%2$s</u> category)"
+MOD_POPULAR_TITLE_CATEGORY_1="Top Popular Article (<u>%2$s</u> category)"
+MOD_POPULAR_TITLE_CATEGORY_MORE="Top %1$s Popular Articles (<u>%2$s</u> category)"
+MOD_POPULAR_TITLE_CATEGORY_BY_ME="Top Popular Articles By Me (%2$s category)"
+MOD_POPULAR_TITLE_CATEGORY_BY_ME_1="Top Popular Article By Me (%2$s category)"
+MOD_POPULAR_TITLE_CATEGORY_BY_ME_MORE="Top %1$s Popular Articles By Me (%2$s category)"
+MOD_POPULAR_TITLE_CATEGORY_NOT_ME="Top Popular Articles Not By Me (%2$s category)"
+MOD_POPULAR_TITLE_CATEGORY_NOT_ME_1="Top Popular Article Not By Me (%2$s category)"
+MOD_POPULAR_TITLE_CATEGORY_NOT_ME_MORE="Top %1$s Popular Articles Not By Me (%2$s category)"
+MOD_POPULAR_UNEXISTING="<i>Unexisting</i>"
 MOD_POPULAR_XML_DESCRIPTION="This Module shows a list of the most popular published Articles that are still current. Some that are shown may have expired even though they are the most recent."
