@@ -18,6 +18,8 @@ COM_MODULES_ERROR_CANNOT_FIND_MODULE="Cannot find module"
 COM_MODULES_ERROR_CANNOT_GET_MODULE="Cannot get module"
 COM_MODULES_ERROR_INVALID_EXTENSION="Invalid module"
 COM_MODULES_ERROR_NO_MODULES_SELECTED="No module selected"
+COM_MODULES_FIELD_AUTOMATIC_TITLE_LABEL="Automatic title"
+COM_MODULES_FIELD_AUTOMATIC_TITLE_DESC="Set yes if you want an automatic translated title. Its use depends on the administrator template."
 COM_MODULES_FIELD_CACHE_TIME_DESC="The time before the module is recached"
 COM_MODULES_FIELD_CACHE_TIME_LABEL="Cache Time"
 COM_MODULES_FIELD_CACHING_DESC="Select whether to cache the content of this module"
