@@ -15,4 +15,7 @@ MOD_LOGGED_LAST_ACTIVITY="Last Activity"
 MOD_LOGGED_LOGOUT="Logout"
 MOD_LOGGED_NAME="Name"
 MOD_LOGGED_SITE="Site"
+MOD_LOGGED_TITLE="Last Logged-in Users"
+MOD_LOGGED_TITLE_1="Last Logged-in User"
+MOD_LOGGED_TITLE_MORE="Last %s Logged-in Users"
 MOD_LOGGED_XML_DESCRIPTION="This Module shows a list of the currently Logged In Users"
